# romanian-personas-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_COMPLETE.md  AWS_MARKETPLACE_DEPLOYMENT.md  CLAUDE.md  DEPLOYMENT_COMPLETE_2026-03-06.md  DEPLOYMENT_READY.md  DOCKER_DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.worker  OPERATIONS_GUIDE.md  buildspec.yml  config.py  deploy-to-aws.sh  docker-compose.yml  migrate_legacy_personas.py  pyproject.toml  setup-aws-build.sh  start-api.sh  test_mcp_server.py  test_personas.py  trigger-build.sh
admin-ui/: .gitignore  CHECKLIST.md  Dockerfile  QUICK_START.md  README.md  index.html  package-lock.json  package.json  server.js  start.sh  vite.config.js
admin-ui/src/: App.css  App.jsx
admin-ui/src/components/: FileUploader.css  FileUploader.jsx  IngestionStatus.css  (+3 more)
agent/: mcp_server.py
api/: __init__.py  dependencies.py  main.py
api/routes/: ingestion.py  personas.py  uploads.py
ingest/: extract_quotes.py  run_ingestion.py  scraper.py
models/: README.md  __init__.py  database.py
persona-debate-ui/: .dockerignore  .env.example  Dockerfile  package.json
persona-debate-ui/public/: index.html
persona-debate-ui/src/: server.js
personas/: __init__.py  _base.py
personas/bratianu/: __init__.py  persona.py  profile.md
personas/caragiale/: __init__.py  persona.py  profile.md
personas/cioran/: __init__.py  persona.py  profile.md
personas/eliade/: __init__.py  persona.py  profile.md
personas/eminescu/: __init__.py  persona.py  profile.md
workers/: README.md  __init__.py  celery_app.py  tasks.py
(+7 files in other folders)
