[project]
name = "romanian-personas-agent"
version = "0.1.0"
description = "MCP server for conversing with Romanian historical personalities"
requires-python = ">=3.11"
dependencies = [
    "llama-index-core>=0.12.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-vector-stores-chroma>=0.4.0",
    "chromadb>=0.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "sqlalchemy>=2.0.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["agent", "ingest", "personas"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
